# MLOps-AirQualityPrediction

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  mlflow.db  model_metadata.yaml  model_metadata.yaml.dvc  nginx.conf  prometheus.yml  pyproject.toml  requirements.txt  test_inference.py  test_iqair_api.py
.dvc/: config
.github/workflows/: ct-pipeline.yml  data-ingest.yaml  mlops-automation.yaml
data/: interim.dvc  raw.dvc
data/interim/: jakarta_aqi_cleaned.csv
data/raw/: jakarta_aqi_20260312_151819.json  jakarta_aqi_20260403_141205.json  jakarta_aqi_20260403_141536.json  jakarta_aqi_20260416_182923.json  jakarta_aqi_20260517_103208.json  jakarta_aqi_20260518_011148.json  jakarta_aqi_20260518_015240.json  jakarta_aqi_20260518_051545.json
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/1/models/m-2c8a54c464924c87bdc54504bac22ef8/artifacts/: MLmodel  conda.yaml  model.ubj  registered_model_meta
mlruns/1/models/m-84b9822b03db46edbd93f35dc4c7ac68/artifacts/: MLmodel  model.ubj  python_env.yaml  requirements.txt
mlruns/1/models/m-8fec2fc99960433eb7561b338fd1a948/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-c0878c5d426f4fee942a83f57f51cf81/artifacts/: MLmodel  model.ubj  requirements.txt
mlruns/1/models/m-f9799c97cc12492ea484ca6a6ffd7dab/artifacts/: MLmodel  model.ubj  python_env.yaml
src/: app.py  app_dashboard.py  ingest_data.py  preprocess.py
src/data/: automated_ingest.py
src/modeling/: inject_drift.py  train.py  validate.py
